--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,4 +1,4 @@
-name: build-cli-linux
+name: build-cli
 
 on:
   workflow_dispatch:
@@ -12,12 +12,12 @@ jobs:
         include:
           - name: ubuntu_22.04
             runner: sdk-linux-16-core
-          #- name: macos_13
-          #  runner: macos-13
-          #- name: macos_14
-          #  runner: macos-14
-          #- name: macos_15
-          #  runner: macos-15
+          - name: macos_13
+            runner: macos-13
+          - name: macos_14
+            runner: macos-14
+          - name: macos_15
+            runner: macos-15
 
     steps:
       - name: Checkout repository
@@ -35,10 +35,12 @@ jobs:
         run: make build
 
       - name: Download runtime
-        run: make download
+        run: |
+          make download
+          mv build nexasdk
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: nexasdk_${{ matrix.name }}
-          path: ./build/*
+          path: ./nexasdk
