--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -6,12 +6,12 @@ on:
 jobs:
   build-cli:
     name: ${{ matrix.os }} - ${{ matrix.backend }}
-    runs-on: sdk-linux-16-core
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu_22.04]
-        backend: [llama-cpp-cpu, llama-cpp-cuda]
+        os: [macos-14, macos-15]
+        backend: [llama-cpp-metal, mlx]
 
     steps:
       - name: Checkout repository
@@ -22,9 +22,6 @@ jobs:
         with:
           go-version: 1.24.3
           cache-dependency-path: runner/go.sum
-
-      - name: Setup MinGW
-        run: choco install mingw -y
 
       - name: Build Nexa Cli
         run: make build
