--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -36,38 +36,38 @@ jobs:
         run: |
           make download BRIDGE_BACKEND=${{ matrix.backend }}
 
-      - name: Import Code-Signing Certificates
-        if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
-        uses: Apple-Actions/import-codesign-certs@v1
-        with:
-          p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
-          p12-password: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
+      # - name: Import Code-Signing Certificates
+      #   if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
+      #   uses: Apple-Actions/import-codesign-certs@v1
+      #   with:
+      #     p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
+      #     p12-password: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
 
-      - name: Sign binaries and libraries
-        if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
-        run: |
-          find ./build/lib -maxdepth 1 -name "*.dylib" -exec codesign --force --options runtime --timestamp --deep --verify --verbose --sign "Developer ID Application: ${{ secrets.APPLE_ID_APPLICATION }}" {} \;
-          codesign --force --options runtime --timestamp --deep --verify --verbose --sign "Developer ID Application: ${{ secrets.APPLE_ID_APPLICATION }}" ./build/nexa
-          codesign --force --options runtime --timestamp --deep --verify --verbose --sign "Developer ID Application: ${{ secrets.APPLE_ID_APPLICATION }}" ./build/nexa-cli
+      # - name: Sign binaries and libraries
+      #   if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
+      #   run: |
+      #     find ./build/lib -maxdepth 1 -name "*.dylib" -exec codesign --force --options runtime --timestamp --deep --verify --verbose --sign "Developer ID Application: ${{ secrets.APPLE_ID_APPLICATION }}" {} \;
+      #     codesign --force --options runtime --timestamp --deep --verify --verbose --sign "Developer ID Application: ${{ secrets.APPLE_ID_APPLICATION }}" ./build/nexa
+      #     codesign --force --options runtime --timestamp --deep --verify --verbose --sign "Developer ID Application: ${{ secrets.APPLE_ID_APPLICATION }}" ./build/nexa-cli
 
-      - name: Notarize and Staple
-        if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
-        run: |
-          cd build
-          zip -r ../nexa-temp.zip nexa nexa-cli lib/*.dylib
+      # - name: Notarize and Staple
+      #   if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
+      #   run: |
+      #     cd build
+      #     zip -r ../nexa-temp.zip nexa nexa-cli lib/*.dylib
 
-          xcrun notarytool submit ../nexa-temp.zip \
-            --apple-id "${{ secrets.APPLE_ID }}" \
-            --password "${{ secrets.APPLE_ID_PASSWORD }}" \
-            --team-id "${{ secrets.APPLE_TEAM_ID }}" \
-            --wait
+      #     xcrun notarytool submit ../nexa-temp.zip \
+      #       --apple-id "${{ secrets.APPLE_ID }}" \
+      #       --password "${{ secrets.APPLE_ID_PASSWORD }}" \
+      #       --team-id "${{ secrets.APPLE_TEAM_ID }}" \
+      #       --wait
 
-          # Staple do not support binaries
-          # xcrun stapler staple -v nexa
-          # xcrun stapler staple -v nexa-cli
-          # find ./lib -maxdepth 1 -name "*.dylib" -exec xcrun stapler staple -v {} \;
+      #     Staple do not support binaries
+      #     xcrun stapler staple -v nexa
+      #     xcrun stapler staple -v nexa-cli
+      #     find ./lib -maxdepth 1 -name "*.dylib" -exec xcrun stapler staple -v {} \;
 
-          cd ..
+      #     cd ..
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
