--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -3,7 +3,7 @@ name: NexaCLI on MacOS
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
   workflow_dispatch:
 
 jobs:
@@ -22,6 +22,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Detect Tag Version
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: echo "VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
+
+      - name: Detect Commit Hash
+        if: github.event_name == 'workflow_dispatch'
+        run: echo "VERSION=${{ github.sha }}" >> $GITHUB_ENV
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -130,19 +138,19 @@ jobs:
       - name: Checkout Homebrew Tap Repository
         uses: actions/checkout@v4
         with:
-          repository: 'zhiyuan8/homebrew-go'
+          repository: "zhiyuan8/homebrew-go"
           path: homebrew-nexa
           token: ${{ secrets.NEXASDK_RELEASE_TOKEN }}
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1'
+          ruby-version: "3.1"
 
       - name: Generate Formula File
         env:
           RELEASE_TAG: ${{ github.ref_name }}
-          RELEASE_REPOSITORY: 'zhiyuan8/homebrew-go-release'
+          RELEASE_REPOSITORY: "zhiyuan8/homebrew-go-release"
           MANIFEST_DATA: ${{ steps.package.outputs.manifest }}
         run: |
           cp $GITHUB_WORKSPACE/.github/scripts/update_formula.rb .
@@ -161,3 +169,4 @@ jobs:
           else
             echo "No changes to the formula file. Skipping commit."
           fi
+
