ci: move build assets to release folder

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -146,7 +146,7 @@ jobs:
           RELEASE_REPOSITORY: 'zhiyuan8/homebrew-go-release'
           MANIFEST_DATA: ${{ steps.package.outputs.manifest }}
         run: |
-          cp $GITHUB_WORKSPACE/.github/scripts/update_formula.rb .
+          cp $GITHUB_WORKSPACE/release/scripts/update_formula.rb .
           ruby ./update_formula.rb
         working-directory: ./homebrew-nexa
 
