ci: add windows service

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -44,6 +44,6 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: nexasdk-cli_${{ matrix.os }}
+          name: nexa-cli_${{ matrix.os }}
           path: ./build
           include-hidden-files: true
